C_Compiler_Bison_Flex/y.output
Terminals unused in grammar

    SWITCH
    CASE
    DEFAULT
    DO
    DOUBLE
    CHAR
    STRING
    BREAK
    CONTINUE
    CONST_CHAR


State 41 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN parameter_list RPAREN error
    9                 | type_specifier ID LPAREN parameter_list error RPAREN SEMICOLON
   10                 | type_specifier ID LPAREN parameter_list error RPAREN error
   11                 | type_specifier ID LPAREN RPAREN SEMICOLON
   12                 | type_specifier ID LPAREN RPAREN error
   13                 | type_specifier ID LPAREN error RPAREN SEMICOLON
   14                 | type_specifier ID LPAREN error RPAREN SEMICOLON error

   15 $@1: ε

   16 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement

   17 $@2: ε

   18 func_definition: type_specifier ID LPAREN parameter_list error RPAREN $@2 compound_statement

   19 $@3: ε

   20 func_definition: type_specifier ID LPAREN RPAREN $@3 compound_statement

   21 $@4: ε

   22 func_definition: type_specifier ID LPAREN error RPAREN $@4 compound_statement

   23 parameter_list: parameter_list COMMA type_specifier ID
   24               | parameter_list error COMMA type_specifier ID
   25               | parameter_list COMMA type_specifier
   26               | parameter_list error COMMA type_specifier
   27               | type_specifier ID
   28               | type_specifier

   29 compound_statement: LCURL create_scope statements RCURL
   30                   | LCURL create_scope statements error RCURL
   31                   | LCURL create_scope error statements RCURL
   32                   | LCURL create_scope RCURL
   33                   | LCURL create_scope error RCURL

   34 create_scope: ε

   35 var_declaration: type_specifier declaration_list SEMICOLON
   36                | type_specifier declaration_list error SEMICOLON

   37 type_specifier: INT
   38               | FLOAT
   39               | VOID

   40 declaration_list: declaration_list COMMA ID
   41                 | declaration_list error COMMA ID
   42                 | declaration_list COMMA ID LTHIRD constant RTHIRD
   43                 | declaration_list error COMMA ID LTHIRD constant RTHIRD
   44                 | ID
   45                 | ID LTHIRD constant RTHIRD

   46 statements: statement
   47           | statements statement
   48           | statements error statement

   49 statement: var_declaration
   50          | func_definition
   51          | func_declaration
   52          | expression_statement
   53          | compound_statement

   54 $@5: ε

   55 $@6: ε

   56 statement: FOR LPAREN expression_statement $@5 expression_statement expression $@6 RPAREN statement
   57          | IF LPAREN expression RPAREN create_if_block statement

   58 $@7: ε

   59 statement: IF LPAREN expression RPAREN create_if_block statement ELSE $@7 statement

   60 $@8: ε

   61 $@9: ε

   62 statement: WHILE $@8 LPAREN expression $@9 RPAREN statement
   63          | PRINTLN LPAREN ID RPAREN SEMICOLON
   64          | RETURN expression SEMICOLON
   65          | RETURN SEMICOLON

   66 create_if_block: ε

   67 expression_statement: SEMICOLON
   68                     | expression SEMICOLON

   69 variable: ID
   70         | ID LTHIRD expression RTHIRD

   71 expression: logic_expression
   72           | variable ASSIGNOP logic_expression

   73 logic_expression: rel_expression
   74                 | rel_expression LOGICOP rel_expression

   75 rel_expression: simple_expression
   76               | simple_expression RELOP simple_expression

   77 simple_expression: term
   78                  | simple_expression ADDOP term

   79 term: unary_expression
   80     | term MULOP unary_expression

   81 unary_expression: ADDOP unary_expression
   82                 | NOT unary_expression
   83                 | factor

   84 factor: variable
   85       | ID LPAREN argument_list RPAREN
   86       | LPAREN expression RPAREN
   87       | CONST_INT
   88       | CONST_FLOAT
   89       | variable INCOP
   90       | variable DECOP

   91 argument_list: arguments
   92              | ε

   93 arguments: arguments COMMA logic_expression
   94          | logic_expression

   95 constant: CONST_INT
   96         | CONST_FLOAT


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 9 10 12 13 14 18 22 24 26 30 31 33 36 41 43 48
    IF <terminal> (258) 57 59
    ELSE <terminal> (259) 59
    THEN <terminal> (260)
    SWITCH <terminal> (261)
    CASE <terminal> (262)
    DEFAULT <terminal> (263)
    FOR <terminal> (264) 56
    DO <terminal> (265)
    WHILE <terminal> (266) 62
    INT <terminal> (267) 37
    FLOAT <terminal> (268) 38
    DOUBLE <terminal> (269)
    CHAR <terminal> (270)
    STRING <terminal> (271)
    VOID <terminal> (272) 39
    BREAK <terminal> (273)
    RETURN <terminal> (274) 64 65
    CONTINUE <terminal> (275)
    INCOP <terminal> (276) 89
    DECOP <terminal> (277) 90
    ASSIGNOP <terminal> (278) 72
    NOT <terminal> (279) 82
    PRINTLN <terminal> (280) 63
    LPAREN <terminal> (281) 7 8 9 10 11 12 13 14 16 18 20 22 56 57 59 62 63 85 86
    RPAREN <terminal> (282) 7 8 9 10 11 12 13 14 16 18 20 22 56 57 59 62 63 85 86
    LCURL <terminal> (283) 29 30 31 32 33
    RCURL <terminal> (284) 29 30 31 32 33
    LTHIRD <terminal> (285) 42 43 45 70
    RTHIRD <terminal> (286) 42 43 45 70
    COMMA <terminal> (287) 23 24 25 26 40 41 42 43 93
    SEMICOLON <terminal> (288) 7 9 11 13 14 35 36 63 64 65 67 68
    ID <terminal> (289) 7 8 9 10 11 12 13 14 16 18 20 22 23 24 27 40 41 42 43 44 45 63 69 70 85
    CONST_INT <terminal> (290) 87 95
    CONST_FLOAT <terminal> (291) 88 96
    CONST_CHAR <terminal> (292)
    ADDOP <terminal> (293) 78 81
    MULOP <terminal> (294) 80
    LOGICOP <terminal> (295) 74
    RELOP <terminal> (296) 76


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    start <non_terminal> (43)
        on left: 1
        on right: 0
    program <non_terminal> (44)
        on left: 2 3
        on right: 1 2
    unit <non_terminal> (45)
        on left: 4 5 6
        on right: 2 3
    func_declaration <non_terminal> (46)
        on left: 7 8 9 10 11 12 13 14
        on right: 5 51
    func_definition <non_terminal> (47)
        on left: 16 18 20 22
        on right: 6 50
    $@1 (48)
        on left: 15
        on right: 16
    $@2 (49)
        on left: 17
        on right: 18
    $@3 (50)
        on left: 19
        on right: 20
    $@4 (51)
        on left: 21
        on right: 22
    parameter_list <params> (52)
        on left: 23 24 25 26 27 28
        on right: 7 8 9 10 16 18 23 24 25 26
    compound_statement <non_terminal> (53)
        on left: 29 30 31 32 33
        on right: 16 18 20 22 53
    create_scope (54)
        on left: 34
        on right: 29 30 31 32 33
    var_declaration <non_terminal> (55)
        on left: 35 36
        on right: 4 49
    type_specifier <non_terminal> (56)
        on left: 37 38 39
        on right: 7 8 9 10 11 12 13 14 16 18 20 22 23 24 25 26 27 28 35 36
    declaration_list <vars> (57)
        on left: 40 41 42 43 44 45
        on right: 35 36 40 41 42 43
    statements <non_terminal> (58)
        on left: 46 47 48
        on right: 29 30 31 47 48
    statement <non_terminal> (59)
        on left: 49 50 51 52 53 56 57 59 62 63 64 65
        on right: 46 47 48 56 57 59 62
    $@5 (60)
        on left: 54
        on right: 56
    $@6 (61)
        on left: 55
        on right: 56
    $@7 (62)
        on left: 58
        on right: 59
    $@8 (63)
        on left: 60
        on right: 62
    $@9 (64)
        on left: 61
        on right: 62
    create_if_block (65)
        on left: 66
        on right: 57 59
    expression_statement <non_terminal> (66)
        on left: 67 68
        on right: 52 56
    variable <expression> (67)
        on left: 69 70
        on right: 72 84 89 90
    expression <expression> (68)
        on left: 71 72
        on right: 56 57 59 62 64 68 70 86
    logic_expression <expression> (69)
        on left: 73 74
        on right: 71 72 93 94
    rel_expression <expression> (70)
        on left: 75 76
        on right: 73 74
    simple_expression <expression> (71)
        on left: 77 78
        on right: 75 76 78
    term <expression> (72)
        on left: 79 80
        on right: 77 78 80
    unary_expression <expression> (73)
        on left: 81 82 83
        on right: 79 80 81 82
    factor <expression> (74)
        on left: 84 85 86 87 88 89 90
        on right: 83
    argument_list <args> (75)
        on left: 91 92
        on right: 85
    arguments <args> (76)
        on left: 93 94
        on right: 91 93
    constant <expression> (77)
        on left: 95 96
        on right: 42 43 45


State 0

    0 $accept: • start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   37 type_specifier: INT •

    $default  reduce using rule 37 (type_specifier)


State 2

   38 type_specifier: FLOAT •

    $default  reduce using rule 38 (type_specifier)


State 3

   39 type_specifier: VOID •

    $default  reduce using rule 39 (type_specifier)


State 4

    0 $accept: start • $end

    $end  shift, and go to state 11


State 5

    1 start: program •
    2 program: program • unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit •

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration •

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition •

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration •

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier • ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier • ID LPAREN parameter_list RPAREN error
    9                 | type_specifier • ID LPAREN parameter_list error RPAREN SEMICOLON
   10                 | type_specifier • ID LPAREN parameter_list error RPAREN error
   11                 | type_specifier • ID LPAREN RPAREN SEMICOLON
   12                 | type_specifier • ID LPAREN RPAREN error
   13                 | type_specifier • ID LPAREN error RPAREN SEMICOLON
   14                 | type_specifier • ID LPAREN error RPAREN SEMICOLON error
   16 func_definition: type_specifier • ID LPAREN parameter_list RPAREN $@1 compound_statement
   18                | type_specifier • ID LPAREN parameter_list error RPAREN $@2 compound_statement
   20                | type_specifier • ID LPAREN RPAREN $@3 compound_statement
   22                | type_specifier • ID LPAREN error RPAREN $@4 compound_statement
   35 var_declaration: type_specifier • declaration_list SEMICOLON
   36                | type_specifier • declaration_list error SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end •

    $default  accept


State 12

    2 program: program unit •

    $default  reduce using rule 2 (program)


State 13

    7 func_declaration: type_specifier ID • LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID • LPAREN parameter_list RPAREN error
    9                 | type_specifier ID • LPAREN parameter_list error RPAREN SEMICOLON
   10                 | type_specifier ID • LPAREN parameter_list error RPAREN error
   11                 | type_specifier ID • LPAREN RPAREN SEMICOLON
   12                 | type_specifier ID • LPAREN RPAREN error
   13                 | type_specifier ID • LPAREN error RPAREN SEMICOLON
   14                 | type_specifier ID • LPAREN error RPAREN SEMICOLON error
   16 func_definition: type_specifier ID • LPAREN parameter_list RPAREN $@1 compound_statement
   18                | type_specifier ID • LPAREN parameter_list error RPAREN $@2 compound_statement
   20                | type_specifier ID • LPAREN RPAREN $@3 compound_statement
   22                | type_specifier ID • LPAREN error RPAREN $@4 compound_statement
   44 declaration_list: ID •
   45                 | ID • LTHIRD constant RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 44 (declaration_list)


State 14

   35 var_declaration: type_specifier declaration_list • SEMICOLON
   36                | type_specifier declaration_list • error SEMICOLON
   40 declaration_list: declaration_list • COMMA ID
   41                 | declaration_list • error COMMA ID
   42                 | declaration_list • COMMA ID LTHIRD constant RTHIRD
   43                 | declaration_list • error COMMA ID LTHIRD constant RTHIRD

    error      shift, and go to state 17
    COMMA      shift, and go to state 18
    SEMICOLON  shift, and go to state 19


State 15

    7 func_declaration: type_specifier ID LPAREN • parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN • parameter_list RPAREN error
    9                 | type_specifier ID LPAREN • parameter_list error RPAREN SEMICOLON
   10                 | type_specifier ID LPAREN • parameter_list error RPAREN error
   11                 | type_specifier ID LPAREN • RPAREN SEMICOLON
   12                 | type_specifier ID LPAREN • RPAREN error
   13                 | type_specifier ID LPAREN • error RPAREN SEMICOLON
   14                 | type_specifier ID LPAREN • error RPAREN SEMICOLON error
   16 func_definition: type_specifier ID LPAREN • parameter_list RPAREN $@1 compound_statement
   18                | type_specifier ID LPAREN • parameter_list error RPAREN $@2 compound_statement
   20                | type_specifier ID LPAREN • RPAREN $@3 compound_statement
   22                | type_specifier ID LPAREN • error RPAREN $@4 compound_statement

    error   shift, and go to state 20
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 21

    parameter_list  go to state 22
    type_specifier  go to state 23


State 16

   45 declaration_list: ID LTHIRD • constant RTHIRD

    CONST_INT    shift, and go to state 24
    CONST_FLOAT  shift, and go to state 25

    constant  go to state 26


State 17

   36 var_declaration: type_specifier declaration_list error • SEMICOLON
   41 declaration_list: declaration_list error • COMMA ID
   43                 | declaration_list error • COMMA ID LTHIRD constant RTHIRD

    COMMA      shift, and go to state 27
    SEMICOLON  shift, and go to state 28


State 18

   40 declaration_list: declaration_list COMMA • ID
   42                 | declaration_list COMMA • ID LTHIRD constant RTHIRD

    ID  shift, and go to state 29


State 19

   35 var_declaration: type_specifier declaration_list SEMICOLON •

    $default  reduce using rule 35 (var_declaration)


State 20

   13 func_declaration: type_specifier ID LPAREN error • RPAREN SEMICOLON
   14                 | type_specifier ID LPAREN error • RPAREN SEMICOLON error
   22 func_definition: type_specifier ID LPAREN error • RPAREN $@4 compound_statement

    RPAREN  shift, and go to state 30


State 21

   11 func_declaration: type_specifier ID LPAREN RPAREN • SEMICOLON
   12                 | type_specifier ID LPAREN RPAREN • error
   20 func_definition: type_specifier ID LPAREN RPAREN • $@3 compound_statement

    error      shift, and go to state 31
    SEMICOLON  shift, and go to state 32

    LCURL  reduce using rule 19 ($@3)

    $@3  go to state 33


State 22

    7 func_declaration: type_specifier ID LPAREN parameter_list • RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN parameter_list • RPAREN error
    9                 | type_specifier ID LPAREN parameter_list • error RPAREN SEMICOLON
   10                 | type_specifier ID LPAREN parameter_list • error RPAREN error
   16 func_definition: type_specifier ID LPAREN parameter_list • RPAREN $@1 compound_statement
   18                | type_specifier ID LPAREN parameter_list • error RPAREN $@2 compound_statement
   23 parameter_list: parameter_list • COMMA type_specifier ID
   24               | parameter_list • error COMMA type_specifier ID
   25               | parameter_list • COMMA type_specifier
   26               | parameter_list • error COMMA type_specifier

    error   shift, and go to state 34
    RPAREN  shift, and go to state 35
    COMMA   shift, and go to state 36


State 23

   27 parameter_list: type_specifier • ID
   28               | type_specifier •

    ID  shift, and go to state 37

    $default  reduce using rule 28 (parameter_list)


State 24

   95 constant: CONST_INT •

    $default  reduce using rule 95 (constant)


State 25

   96 constant: CONST_FLOAT •

    $default  reduce using rule 96 (constant)


State 26

   45 declaration_list: ID LTHIRD constant • RTHIRD

    RTHIRD  shift, and go to state 38


State 27

   41 declaration_list: declaration_list error COMMA • ID
   43                 | declaration_list error COMMA • ID LTHIRD constant RTHIRD

    ID  shift, and go to state 39


State 28

   36 var_declaration: type_specifier declaration_list error SEMICOLON •

    $default  reduce using rule 36 (var_declaration)


State 29

   40 declaration_list: declaration_list COMMA ID •
   42                 | declaration_list COMMA ID • LTHIRD constant RTHIRD

    LTHIRD  shift, and go to state 40

    $default  reduce using rule 40 (declaration_list)


State 30

   13 func_declaration: type_specifier ID LPAREN error RPAREN • SEMICOLON
   14                 | type_specifier ID LPAREN error RPAREN • SEMICOLON error
   22 func_definition: type_specifier ID LPAREN error RPAREN • $@4 compound_statement

    SEMICOLON  shift, and go to state 41

    $default  reduce using rule 21 ($@4)

    $@4  go to state 42


State 31

   12 func_declaration: type_specifier ID LPAREN RPAREN error •

    $default  reduce using rule 12 (func_declaration)


State 32

   11 func_declaration: type_specifier ID LPAREN RPAREN SEMICOLON •

    $default  reduce using rule 11 (func_declaration)


State 33

   20 func_definition: type_specifier ID LPAREN RPAREN $@3 • compound_statement

    LCURL  shift, and go to state 43

    compound_statement  go to state 44


State 34

    9 func_declaration: type_specifier ID LPAREN parameter_list error • RPAREN SEMICOLON
   10                 | type_specifier ID LPAREN parameter_list error • RPAREN error
   18 func_definition: type_specifier ID LPAREN parameter_list error • RPAREN $@2 compound_statement
   24 parameter_list: parameter_list error • COMMA type_specifier ID
   26               | parameter_list error • COMMA type_specifier

    RPAREN  shift, and go to state 45
    COMMA   shift, and go to state 46


State 35

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN • SEMICOLON
    8                 | type_specifier ID LPAREN parameter_list RPAREN • error
   16 func_definition: type_specifier ID LPAREN parameter_list RPAREN • $@1 compound_statement

    error      shift, and go to state 47
    SEMICOLON  shift, and go to state 48

    LCURL  reduce using rule 15 ($@1)

    $@1  go to state 49


State 36

   23 parameter_list: parameter_list COMMA • type_specifier ID
   25               | parameter_list COMMA • type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 50


State 37

   27 parameter_list: type_specifier ID •

    $default  reduce using rule 27 (parameter_list)


State 38

   45 declaration_list: ID LTHIRD constant RTHIRD •

    $default  reduce using rule 45 (declaration_list)


State 39

   41 declaration_list: declaration_list error COMMA ID •
   43                 | declaration_list error COMMA ID • LTHIRD constant RTHIRD

    LTHIRD  shift, and go to state 51

    $default  reduce using rule 41 (declaration_list)


State 40

   42 declaration_list: declaration_list COMMA ID LTHIRD • constant RTHIRD

    CONST_INT    shift, and go to state 24
    CONST_FLOAT  shift, and go to state 25

    constant  go to state 52


State 41

   13 func_declaration: type_specifier ID LPAREN error RPAREN SEMICOLON •
   14                 | type_specifier ID LPAREN error RPAREN SEMICOLON • error

    error  shift, and go to state 53

    $end         reduce using rule 13 (func_declaration)
    error        [reduce using rule 13 (func_declaration)]
    IF           reduce using rule 13 (func_declaration)
    ELSE         reduce using rule 13 (func_declaration)
    FOR          reduce using rule 13 (func_declaration)
    WHILE        reduce using rule 13 (func_declaration)
    INT          reduce using rule 13 (func_declaration)
    FLOAT        reduce using rule 13 (func_declaration)
    VOID         reduce using rule 13 (func_declaration)
    RETURN       reduce using rule 13 (func_declaration)
    NOT          reduce using rule 13 (func_declaration)
    PRINTLN      reduce using rule 13 (func_declaration)
    LPAREN       reduce using rule 13 (func_declaration)
    LCURL        reduce using rule 13 (func_declaration)
    RCURL        reduce using rule 13 (func_declaration)
    SEMICOLON    reduce using rule 13 (func_declaration)
    ID           reduce using rule 13 (func_declaration)
    CONST_INT    reduce using rule 13 (func_declaration)
    CONST_FLOAT  reduce using rule 13 (func_declaration)
    ADDOP        reduce using rule 13 (func_declaration)


State 42

   22 func_definition: type_specifier ID LPAREN error RPAREN $@4 • compound_statement

    LCURL  shift, and go to state 43

    compound_statement  go to state 54


State 43

   29 compound_statement: LCURL • create_scope statements RCURL
   30                   | LCURL • create_scope statements error RCURL
   31                   | LCURL • create_scope error statements RCURL
   32                   | LCURL • create_scope RCURL
   33                   | LCURL • create_scope error RCURL

    $default  reduce using rule 34 (create_scope)

    create_scope  go to state 55


State 44

   20 func_definition: type_specifier ID LPAREN RPAREN $@3 compound_statement •

    $default  reduce using rule 20 (func_definition)


State 45

    9 func_declaration: type_specifier ID LPAREN parameter_list error RPAREN • SEMICOLON
   10                 | type_specifier ID LPAREN parameter_list error RPAREN • error
   18 func_definition: type_specifier ID LPAREN parameter_list error RPAREN • $@2 compound_statement

    error      shift, and go to state 56
    SEMICOLON  shift, and go to state 57

    LCURL  reduce using rule 17 ($@2)

    $@2  go to state 58


State 46

   24 parameter_list: parameter_list error COMMA • type_specifier ID
   26               | parameter_list error COMMA • type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 59


State 47

    8 func_declaration: type_specifier ID LPAREN parameter_list RPAREN error •

    $default  reduce using rule 8 (func_declaration)


State 48

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON •

    $default  reduce using rule 7 (func_declaration)


State 49

   16 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 • compound_statement

    LCURL  shift, and go to state 43

    compound_statement  go to state 60


State 50

   23 parameter_list: parameter_list COMMA type_specifier • ID
   25               | parameter_list COMMA type_specifier •

    ID  shift, and go to state 61

    $default  reduce using rule 25 (parameter_list)


State 51

   43 declaration_list: declaration_list error COMMA ID LTHIRD • constant RTHIRD

    CONST_INT    shift, and go to state 24
    CONST_FLOAT  shift, and go to state 25

    constant  go to state 62


State 52

   42 declaration_list: declaration_list COMMA ID LTHIRD constant • RTHIRD

    RTHIRD  shift, and go to state 63


State 53

   14 func_declaration: type_specifier ID LPAREN error RPAREN SEMICOLON error •

    $default  reduce using rule 14 (func_declaration)


State 54

   22 func_definition: type_specifier ID LPAREN error RPAREN $@4 compound_statement •

    $default  reduce using rule 22 (func_definition)


State 55

   29 compound_statement: LCURL create_scope • statements RCURL
   30                   | LCURL create_scope • statements error RCURL
   31                   | LCURL create_scope • error statements RCURL
   32                   | LCURL create_scope • RCURL
   33                   | LCURL create_scope • error RCURL

    error        shift, and go to state 64
    IF           shift, and go to state 65
    FOR          shift, and go to state 66
    WHILE        shift, and go to state 67
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 68
    NOT          shift, and go to state 69
    PRINTLN      shift, and go to state 70
    LPAREN       shift, and go to state 71
    LCURL        shift, and go to state 43
    RCURL        shift, and go to state 72
    SEMICOLON    shift, and go to state 73
    ID           shift, and go to state 74
    CONST_INT    shift, and go to state 75
    CONST_FLOAT  shift, and go to state 76
    ADDOP        shift, and go to state 77

    func_declaration      go to state 78
    func_definition       go to state 79
    compound_statement    go to state 80
    var_declaration       go to state 81
    type_specifier        go to state 10
    statements            go to state 82
    statement             go to state 83
    expression_statement  go to state 84
    variable              go to state 85
    expression            go to state 86
    logic_expression      go to state 87
    rel_expression        go to state 88
    simple_expression     go to state 89
    term                  go to state 90
    unary_expression      go to state 91
    factor                go to state 92


State 56

   10 func_declaration: type_specifier ID LPAREN parameter_list error RPAREN error •

    $default  reduce using rule 10 (func_declaration)


State 57

    9 func_declaration: type_specifier ID LPAREN parameter_list error RPAREN SEMICOLON •

    $default  reduce using rule 9 (func_declaration)


State 58

   18 func_definition: type_specifier ID LPAREN parameter_list error RPAREN $@2 • compound_statement

    LCURL  shift, and go to state 43

    compound_statement  go to state 93


State 59

   24 parameter_list: parameter_list error COMMA type_specifier • ID
   26               | parameter_list error COMMA type_specifier •

    ID  shift, and go to state 94

    $default  reduce using rule 26 (parameter_list)


State 60

   16 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement •

    $default  reduce using rule 16 (func_definition)


State 61

   23 parameter_list: parameter_list COMMA type_specifier ID •

    $default  reduce using rule 23 (parameter_list)


State 62

   43 declaration_list: declaration_list error COMMA ID LTHIRD constant • RTHIRD

    RTHIRD  shift, and go to state 95


State 63

   42 declaration_list: declaration_list COMMA ID LTHIRD constant RTHIRD •

    $default  reduce using rule 42 (declaration_list)


State 64

   31 compound_statement: LCURL create_scope error • statements RCURL
   33                   | LCURL create_scope error • RCURL

    IF           shift, and go to state 65
    FOR          shift, and go to state 66
    WHILE        shift, and go to state 67
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 68
    NOT          shift, and go to state 69
    PRINTLN      shift, and go to state 70
    LPAREN       shift, and go to state 71
    LCURL        shift, and go to state 43
    RCURL        shift, and go to state 96
    SEMICOLON    shift, and go to state 73
    ID           shift, and go to state 74
    CONST_INT    shift, and go to state 75
    CONST_FLOAT  shift, and go to state 76
    ADDOP        shift, and go to state 77

    func_declaration      go to state 78
    func_definition       go to state 79
    compound_statement    go to state 80
    var_declaration       go to state 81
    type_specifier        go to state 10
    statements            go to state 97
    statement             go to state 83
    expression_statement  go to state 84
    variable              go to state 85
    expression            go to state 86
    logic_expression      go to state 87
    rel_expression        go to state 88
    simple_expression     go to state 89
    term                  go to state 90
    unary_expression      go to state 91
    factor                go to state 92


State 65

   57 statement: IF • LPAREN expression RPAREN create_if_block statement
   59          | IF • LPAREN expression RPAREN create_if_block statement ELSE $@7 statement

    LPAREN  shift, and go to state 98


State 66

   56 statement: FOR • LPAREN expression_statement $@5 expression_statement expression $@6 RPAREN statement

    LPAREN  shift, and go to state 99


State 67

   62 statement: WHILE • $@8 LPAREN expression $@9 RPAREN statement

    $default  reduce using rule 60 ($@8)

    $@8  go to state 100


State 68

   64 statement: RETURN • expression SEMICOLON
   65          | RETURN • SEMICOLON

    NOT          shift, and go to state 69
    LPAREN       shift, and go to state 71
    SEMICOLON    shift, and go to state 101
    ID           shift, and go to state 74
    CONST_INT    shift, and go to state 75
    CONST_FLOAT  shift, and go to state 76
    ADDOP        shift, and go to state 77

    variable           go to state 85
    expression         go to state 102
    logic_expression   go to state 87
    rel_expression     go to state 88
    simple_expression  go to state 89
    term               go to state 90
    unary_expression   go to state 91
    factor             go to state 92


State 69

   82 unary_expression: NOT • unary_expression

    NOT          shift, and go to state 69
    LPAREN       shift, and go to state 71
    ID           shift, and go to state 74
    CONST_INT    shift, and go to state 75
    CONST_FLOAT  shift, and go to state 76
    ADDOP        shift, and go to state 77

    variable          go to state 103
    unary_expression  go to state 104
    factor            go to state 92


State 70

   63 statement: PRINTLN • LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 105


State 71

   86 factor: LPAREN • expression RPAREN

    NOT          shift, and go to state 69
    LPAREN       shift, and go to state 71
    ID           shift, and go to state 74
    CONST_INT    shift, and go to state 75
    CONST_FLOAT  shift, and go to state 76
    ADDOP        shift, and go to state 77

    variable           go to state 85
    expression         go to state 106
    logic_expression   go to state 87
    rel_expression     go to state 88
    simple_expression  go to state 89
    term               go to state 90
    unary_expression   go to state 91
    factor             go to state 92


State 72

   32 compound_statement: LCURL create_scope RCURL •

    $default  reduce using rule 32 (compound_statement)


State 73

   67 expression_statement: SEMICOLON •

    $default  reduce using rule 67 (expression_statement)


State 74

   69 variable: ID •
   70         | ID • LTHIRD expression RTHIRD
   85 factor: ID • LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 107
    LTHIRD  shift, and go to state 108

    $default  reduce using rule 69 (variable)


State 75

   87 factor: CONST_INT •

    $default  reduce using rule 87 (factor)


State 76

   88 factor: CONST_FLOAT •

    $default  reduce using rule 88 (factor)


State 77

   81 unary_expression: ADDOP • unary_expression

    NOT          shift, and go to state 69
    LPAREN       shift, and go to state 71
    ID           shift, and go to state 74
    CONST_INT    shift, and go to state 75
    CONST_FLOAT  shift, and go to state 76
    ADDOP        shift, and go to state 77

    variable          go to state 103
    unary_expression  go to state 109
    factor            go to state 92


State 78

   51 statement: func_declaration •

    $default  reduce using rule 51 (statement)


State 79

   50 statement: func_definition •

    $default  reduce using rule 50 (statement)


State 80

   53 statement: compound_statement •

    $default  reduce using rule 53 (statement)


State 81

   49 statement: var_declaration •

    $default  reduce using rule 49 (statement)


State 82

   29 compound_statement: LCURL create_scope statements • RCURL
   30                   | LCURL create_scope statements • error RCURL
   47 statements: statements • statement
   48           | statements • error statement

    error        shift, and go to state 110
    IF           shift, and go to state 65
    FOR          shift, and go to state 66
    WHILE        shift, and go to state 67
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 68
    NOT          shift, and go to state 69
    PRINTLN      shift, and go to state 70
    LPAREN       shift, and go to state 71
    LCURL        shift, and go to state 43
    RCURL        shift, and go to state 111
    SEMICOLON    shift, and go to state 73
    ID           shift, and go to state 74
    CONST_INT    shift, and go to state 75
    CONST_FLOAT  shift, and go to state 76
    ADDOP        shift, and go to state 77

    func_declaration      go to state 78
    func_definition       go to state 79
    compound_statement    go to state 80
    var_declaration       go to state 81
    type_specifier        go to state 10
    statement             go to state 112
    expression_statement  go to state 84
    variable              go to state 85
    expression            go to state 86
    logic_expression      go to state 87
    rel_expression        go to state 88
    simple_expression     go to state 89
    term                  go to state 90
    unary_expression      go to state 91
    factor                go to state 92


State 83

   46 statements: statement •

    $default  reduce using rule 46 (statements)


State 84

   52 statement: expression_statement •

    $default  reduce using rule 52 (statement)


State 85

   72 expression: variable • ASSIGNOP logic_expression
   84 factor: variable •
   89       | variable • INCOP
   90       | variable • DECOP

    INCOP     shift, and go to state 113
    DECOP     shift, and go to state 114
    ASSIGNOP  shift, and go to state 115

    $default  reduce using rule 84 (factor)


State 86

   68 expression_statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 116


State 87

   71 expression: logic_expression •

    $default  reduce using rule 71 (expression)


State 88

   73 logic_expression: rel_expression •
   74                 | rel_expression • LOGICOP rel_expression

    LOGICOP  shift, and go to state 117

    $default  reduce using rule 73 (logic_expression)


State 89

   75 rel_expression: simple_expression •
   76               | simple_expression • RELOP simple_expression
   78 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 118
    RELOP  shift, and go to state 119

    $default  reduce using rule 75 (rel_expression)


State 90

   77 simple_expression: term •
   80 term: term • MULOP unary_expression

    MULOP  shift, and go to state 120

    $default  reduce using rule 77 (simple_expression)


State 91

   79 term: unary_expression •

    $default  reduce using rule 79 (term)


State 92
